libycp/testsuite/tests/errors/termbug.ycp
// termbug
{
    term contents = `VBox ();
    contents = add (contents, (`VSpacing (1)));

    return contents;
}

{
    term a=``(y2error("hell"));

    return a;
}
